@startuml

title RockstarSays Design Class Diagram


class SplashScreen {

}
class MainGame {
difficulty
level
curLevel
count
initialCount
highScore
greatestScore
gameLength
start()
highlightRed()
highlightBLue()
highlightYellow()
highlightGreen()
nextLevel()
endGame()
highlightAll()
}
class MainMenu {
options
}
class Options {
enableSound
disableSound
onOptionSelected()
}

SplashScreen "1" --> "1" MainMenu : preludes >
MainMenu "1" --> "1" MainGame : starts >
MainMenu "1" --> "1" Options : displays >
MainGame "1" --> "1" MainMenu : exits to >
Options "1" --> "1" MainMenu : exits to >

@enduml